--- a/example.qmd
+++ b/example.qmd
@@ -1,40 +1,38 @@
 ---
-title: Academicons Quarto Extension
+title: Scholaricons Quarto Extension
 format: html
 ---
 
-This extension allows you to use [academicons](https://jpswalsh.github.io/academicons/) in your Quarto HTML documents. It provides an `{{{< ai >}}}` shortcode:
+This extension allows you to use [Scholaricons](https://treysaddler.github.io/scholaricons/) in your Quarto HTML documents. It provides an `{{{< sci >}}}` shortcode:
 
 - Mandatory `<icon-name>`:
   ``` markdown
-  {{{< ai <icon-name> >}}}
+  {{{< sci <icon-name> >}}}
   ```
 
 - Optional `<size=...>`:
   ``` markdown
-  {{{< ai <icon-name> <size=...> >}}}
+  {{{< sci <icon-name> <size=...> >}}}
   ```
 
 - Optional `<color=...>`:
   ``` markdown
-  {{{< ai <icon-name> <color=...> >}}}
+  {{{< sci <icon-name> <color=...> >}}}
   ```
-
 
 - Optional `<hsize=...>` and `<psize=...>` to specify different sizes for HTML and PDF documents:
   ``` markdown
-  {{{< ai <icon-name> <hsize=...> <psize=...> >}}}
+  {{{< sci <icon-name> <hsize=...> <psize=...> >}}}
   ```
 
 For example:
 
 | Shortcode                          | Icon                           |
 |------------------------------------|--------------------------------|
-| `{{{< ai arxiv >}}}`               | {{< ai arxiv >}}               |
-| `{{{< ai google-scholar >}}}`      | {{< ai google-scholar >}}      |
-| `{{{< ai open-access >}}}`         | {{< ai open-access >}}         |
-| `{{{< ai open-access size=5x >}}}` | {{< ai open-access size=5x >}} |
-| `{{{< ai open-access size=3x >}}}` | {{< ai open-access size=3x >}} |
-| `{{{< ai open-access hsize=xl psize=Large >}}}` | {{< ai open-access hsize=xl psize=Large >}} |
-| `{{{< ai open-access color=red >}}}` | {{< ai open-access color=red >}} |
-
+| `{{{< sci arxiv >}}}`               | {{< sci arxiv >}}               |
+| `{{{< sci google-scholar >}}}`      | {{< sci google-scholar >}}      |
+| `{{{< sci open-access >}}}`         | {{< sci open-access >}}         |
+| `{{{< sci open-access size=5x >}}}` | {{< sci open-access size=5x >}} |
+| `{{{< sci open-access size=3x >}}}` | {{< sci open-access size=3x >}} |
+| `{{{< sci open-access hsize=xl psize=Large >}}}` | {{< sci open-access hsize=xl psize=Large >}} |
+| `{{{< sci open-access color=red >}}}` | {{< sci open-access color=red >}} |
